# Cipher-P-

./: README.md
.zed/: settings.json
backend/cpp/: CMakeLists.txt  DOWNLOAD_LINKS.txt  Makefile  README.md  RUN_SERVER.bat  build.bat  build_mingw.ps1  main.cpp
backend/cpp/algorithms/: AffineCipher.cpp  AffineCipher.h  CaesarCipher.cpp  CaesarCipher.h  CipherBase.h  HillCipher.cpp  HillCipher.h  MultiplicativeCipher.cpp  MultiplicativeCipher.h  PlayfairCipher.cpp  PlayfairCipher.h  RC4Cipher.cpp  RC4Cipher.h  RailFenceCipher.cpp  RailFenceCipher.h
backend/cpp/core/: ImageLoader.cpp  ImageLoader.h  ImageReconstructor.cpp  ImageReconstructor.h  PixelProcessor.cpp  PixelProcessor.h
backend/cpp/math/: MatrixOperations.cpp  MatrixOperations.h  ModularArithmetic.cpp  ModularArithmetic.h
backend/cpp/processing/: CipherFactory.cpp  CipherFactory.h  DecryptionPipeline.cpp  DecryptionPipeline.h  EncryptionPipeline.cpp  EncryptionPipeline.h
frontend/: app.js  index.html  index_new.html  styles.css  styles_new.css
report/: flowcharts.html  report.html
